objects/vlocity_cmt__RuleProperty__c.object
<CustomObject>
    <fields>
        <fullName>vlocity_cmt__DefaultValue__c</fullName>
        <inlineHelpText>A static value which will be compared to the values on all incoming Applications during the screening process.</inlineHelpText>
        <label>Default Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PropertyType__c</fullName>
        <label>Property Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Boolean</fullName>
                </value>
                <value>
                    <fullName>Date</fullName>
                </value>
                <value>
                    <fullName>Datetime</fullName>
                </value>
                <value>
                    <fullName>Decimal</fullName>
                </value>
                <value>
                    <fullName>Double</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>Integer</fullName>
                </value>
                <value>
                    <fullName>List&lt;Boolean&gt;</fullName>
                </value>
                <value>
                    <fullName>List&lt;String&gt;</fullName>
                </value>
                <value>
                    <fullName>Long</fullName>
                </value>
                <value>
                    <fullName>Object</fullName>
                </value>
                <value>
                    <fullName>String</fullName>
                </value>
                <value>
                    <fullName>Map&lt;String, String&gt;</fullName>
                </value>
                <value>
                    <fullName>Map&lt;String, Boolean&gt;</fullName>
                </value>
                <value>
                    <fullName>List&lt;Decimal&gt;</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ScreeningRuleId__c</fullName>
        <label>Screening Rule</label>
        <referenceTo>vlocity_cmt__ScreeningRule__c</referenceTo>
        <relationshipLabel>Rule Properties</relationshipLabel>
        <relationshipName>RuleProperties</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Rule Property</label>
    <nameField>
        <label>Property Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rule Properties</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>